src/test/ui/issues/issue-46311.stderr
error: invalid label name `'break`
  --> $DIR/issue-46311.rs:2:5
   |
LL |     'break: loop { //~ ERROR invalid label name `'break`
   |     ^^^^^^

error: aborting due to previous error

