src/test/ui/issues/issue-46311.rs
fn main() {
    'break: loop { //~ ERROR invalid label name `'break`
    }
}
